menu fixed on mobile

--- a/PointNemo/music/css/sonar-home-screen.scss
+++ b/PointNemo/music/css/sonar-home-screen.scss
@@ -148,8 +148,10 @@ main{
 }
 main.central-page-content{
     flex-grow: 1;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     gap: 10px;
 }
@@ -157,7 +159,7 @@ main.central-page-content{
     background: var(--main-background);
     padding: 1rem;
     border-radius: 15px;
-    width: 40%;
+    width: 33%;
     border: var(--container-border);
 }
 .information-wrapper{
@@ -217,6 +219,20 @@ button.choose-service-btn{
     font-family: light-text;
     border-radius: 100vw;
 }
+.sonar-quiz-introduction-container{
+    background: var(--main-background);
+    padding: 1rem;
+    border-radius: 15px;
+    width: 33%;
+    border: var(--container-border);
+}
+.extra-information-content-container{
+    background: var(--main-background);
+    padding: 1rem;
+    border-radius: 15px;
+    width: 33%;
+    border: var(--container-border);
+}
 .service-selection-menu-container{
   background: var(--main-background);
   padding: 1rem;
@@ -224,7 +240,7 @@ button.choose-service-btn{
   position: absolute;
   top: 12.5vh;
   left: 12.5%;
-  height: 75vh;
+  height: 85vh;
   width: 75%;
   border: var(--container-border);  
   box-shadow: var(--menu-box-shadow);
@@ -272,11 +288,12 @@ button.close-menu-btn{
     gap: 1rem;
 }
 article.service-choice{
-    height: 300px;
+    height: 100%;
     width: 33%;
     border-radius: 15px;
     border: var(--container-border);
     background: var(--main-background);
+    padding: .5rem;
 }
 .service-logo-wrapper{
     height: 67%;
@@ -329,7 +346,41 @@ button.choose-btn{
     header.page-header{
         padding: .5rem 1rem;
     }
+    main.central-page-content{
+        // display: block;
+        overflow: scroll;
+    }
     .central-page-content-wrapper{
         width: 95%;
+        margin-inline: auto;
+        margin-bottom: 1rem;
+    }
+    .sonar-quiz-introduction-container{
+        width: 95%;
+        margin-inline: auto;
+        margin-bottom: 1rem;
+    }
+    .extra-information-content-container{
+        width: 95%;
+        margin-inline: auto;
+    }
+    .service-selection-menu-container{
+        width: 95%;
+        height: 80dvh;
+        left: 2.5%;
+    }
+    .streaming-service-choices-container{
+        overflow: scroll;
+        display: block;
+    }
+    .choice-row{
+        flex-direction: column;
+        gap: 1rem;
+        height: fit-content;
+        margin-bottom: 1rem;
+    }
+    article.service-choice{
+        width: 100%;
+        height: 250px;
     }
 }
